# test_speeder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/adapters/: http_client.py
app/common/: logging.py
app/core/: aiohttp_exception_handler.py  config.py
app/pyd/: schemas.py
app/services/: reporter.py  speeder.py
app/utils/: validators.py
tests/: conftest.py
tests/unit/: test_exception_handler.py  test_http_client.py  test_logging.py  test_schemas.py  test_speeder.py  test_validators.py
