[project]
name = "test-speeder"
version = "0.1.0"
description = "CLI internet speed tester — measures download speed via sequential HTTP requests"
authors = [
    {name = "Primero1800", email = "alexprimero1800@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.0,<4.0.0"
dependencies = [
    "aiohttp (>=3.13.0,<4.0.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.12"
mypy = "^2.0.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
